# ecom-shop-order-service

./: .pre-commit-config.yaml  Dockerfile  README.md  env.example  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
api/: __init__.py  order.py
app/: exceptions.py
app/dependencies/: auth.py
app/models/: order.py  outbox.py
app/schemas/: order.py
app/services/: order.py
core/: server.py
core/broker/: client.py
core/db/: session.py
core/settings/: __init__.py  base.py
entrypoints/: dev.sh  prod.sh
gunicorn/: gunicorn.dev.conf.py  gunicorn.prod.conf.py
tests/: conftest.py  models.py  test_api.py  test_services.py
