[project]
name = "ecom-shop-order-service"
version = "0.1.0"
description = ""
authors = [
    {name = "kajetanjanusz",email = "kajtek.k.janusz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "ecom-shop-shared-lib @ git+https://github.com/KajetanJanusz/ecom-shop-shared-lib.git@dev",
    "passlib (>=1.7.4,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pyjwt (>=2.8.0,<3.0.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
]


[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
faker = ">=40.11.1,<41.0.0"
factory-boy = ">=3.3.3,<4.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
